--- a/starRating.html
+++ b/starRating.html
@@ -22,42 +22,38 @@
           <input type="radio" name="rate" id="rate-2" value="2" onclick="checkRate()">
           <label for="rate-2" class="fas fa-star"></label>
           <input type="radio" name="rate" id="rate-1" value="1" onclick="checkRate()">
-        <label for="rate-1" class="fas fa-star"></label>
-        <form action="">
-          <header></header>
-          <div class="textarea">
-            <textarea cols="30" placeholder="Describe your experience.."></textarea>
-          </div>
-          <div class="btn">
-            <button type="submit">Post</button>
-          </div>
-        </form>
+          <label for="rate-1" class="fas fa-star"></label>
+
+          <form action="RateDB.php" method="post">
+            <header></header>
+            <div class="inputs">
+              <input type="email" name="email" placeholder="Enter your Email"></input>
+            </div>
+            <div class="textarea">
+              <br>
+              <input value="5" name="ratenum" id="ratenum" ></input>
+              <textarea cols="30" placeholder="Describe your experience.." name="reviewBox" ></textarea>
+            </div>
+            <div class="btn">
+              <button type="submit" name="submit" onclick="RateDB.php">Post</button>
+            </div>
+          </form>
+
       </div>
     </div>
     <script>
+    var rating = 0;
+    ratenum = document.getElementById("ratenum");
       function checkRate(){
         var stars = document.getElementsByName("rate");
         var len = stars.length;
-        var rating = 0;
         for(i=0; i<len; i++){
           if(stars[i].checked)
             rating = stars[i].value;
+            ratenum.value = rating;
         }
       }
 
-      const btn = document.querySelector("button");
-      const post = document.querySelector(".post");
-      const widget = document.querySelector(".star-widget");
-      const editBtn = document.querySelector(".edit");
-      btn.onclick = ()=>{
-        widget.style.display = "none";
-        post.style.display = "block";
-        editBtn.onclick = ()=>{
-          widget.style.display = "block";
-          post.style.display = "none";
-        }
-        return false;
-      }
     </script>
 
   </body>
